# pptxrs

./: Cargo.toml  README.md  package.json
examples/: 01-create-from-scratch.js  02-from-json.js  03-import-existing.js  04-modify.js  05-text-measurement.js  06-charts.js
js/: index.d.ts  index.js
scripts/: post-build.js
src/: lib.rs
src/bindings/: element.rs  mod.rs  presentation.rs  slide.rs
src/builder/: mod.rs  xml.rs
src/measure/: font.rs  mod.rs
src/model/: elements.rs  master.rs  mod.rs  presentation.rs  slide.rs
src/parser/: mod.rs  xml.rs
tests/: elements.test.js  fidelity.test.js  helpers.js  images.test.js  json.test.js  notes.test.js  parse.test.js  passthrough.test.js  presentation.test.js  shapes.test.js  tables.test.js  text.test.js
