[package]
name = "pptxrs"
version = "0.1.9"
edition = "2024"
description = "Create, read, modify, and export .pptx files — Rust/WASM npm library for Node.js"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde-wasm-bindgen = "0.6"
zip                = { version = "2", default-features = false, features = ["deflate"] }
quick-xml          = "0.37"
rustybuzz          = "0.20"
ttf-parser         = "0.25"
unicode-linebreak   = "0.1"
uuid               = { version = "1", features = ["v4", "js"] }
base64             = "0.22"
thiserror          = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
